--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ python:
   - "pypy3" # Pypy3 2.4.0
   - "pypy-5.3.1"
 # command to install dependencies
-# install:
+install:
 #  - pip install .
-#  - pip install -r requirements.txt
+  - pip install -r requirements.txt
 # command to run tests
 script: pytest
