--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,6 @@ install:
   - pip install -r requirements.txt
 # command to run tests
 script: python test.py
+addons:
+    code_climate:
+        repo_token: a21f41044d04712804892fb88830776126a0e47969001e6ce369ba8ad9c423e8
